[python|grid] bind intersections

--- a/python/dune/xt/grid/CMakeLists.txt
+++ b/python/dune/xt/grid/CMakeLists.txt
@@ -26,6 +26,7 @@ dune_pybindxi_add_module(_grid_functors_boundary_detector EXCLUDE_FROM_ALL funct
 dune_pybindxi_add_module(_grid_functors_interfaces EXCLUDE_FROM_ALL functors/interfaces.cc)
 # dune_pybindxi_add_module(_grid_functors_refinement EXCLUDE_FROM_ALL functors/refinement.cc)
 dune_pybindxi_add_module(_grid_gridprovider_cube EXCLUDE_FROM_ALL gridprovider/cube.cc)
+dune_pybindxi_add_module(_grid_intersection EXCLUDE_FROM_ALL intersection.cc)
 dune_pybindxi_add_module(_grid_gridprovider_provider EXCLUDE_FROM_ALL gridprovider/provider.cc)
 dune_pybindxi_add_module(_grid_traits EXCLUDE_FROM_ALL traits.cc)
 dune_pybindxi_add_module(_grid_types EXCLUDE_FROM_ALL types.cc)
