--- a/.ci/gitlab/config.yml
+++ b/.ci/gitlab/config.yml
@@ -27,15 +27,15 @@ variables:
         max: 2
         when:
             - always
-    image: docker:stable
+    image: docker:19.03.12
     variables:
         DOCKER_HOST: tcp://docker:2375/
         DOCKER_DRIVER: overlay2
         IMAGE: $CI_REGISTRY/ag-ohlberger/dune-community/dune-xt/ci_testing_${DOCKER_TAG}:${CI_COMMIT_SHORT_SHA}
     before_script:
       - |
-        apk --update add openssh-client rsync git file bash python3 curl
-        pip3 install -U docker jinja2 docopt
+        apk --update add openssh-client rsync git file bash python3 py3-pip curl
+        pip install -U docker jinja2 docopt
 
         export BASEIMAGE="${MY_MODULE}-testing_${DOCKER_TAG}:${CI_COMMIT_REF_NAME/\//_}"
         # get image with fallback to master branch of the super repo
