--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -13,9 +13,8 @@
 
 include(DuneXTTesting)
 
-# Currently, the python libraries do not have access to the config.h variables, see
-# https://github.com/dune-community/dune-xt-common/issues/120
-# The following silences all the resulting -Wundef warnings in this directory
+# Currently, the python libraries do not have access to the config.h variables, see https://github.com/dune-
+# community/dune-xt-common/issues/120 The following silences all the resulting -Wundef warnings in this directory
 add_compile_options(-Wno-undef)
 add_subdirectory(dune)
 add_subdirectory(scripts)
