[ci] pip3 -> pip

--- a/.ci/gitlab/config.yml
+++ b/.ci/gitlab/config.yml
@@ -35,7 +35,7 @@ variables:
     before_script:
       - |
         apk --update add openssh-client rsync git file bash python3 curl
-        pip3 install -U docker jinja2 docopt
+        pip install -U docker jinja2 docopt
 
         export BASEIMAGE="${MY_MODULE}-testing_${DOCKER_TAG}:${CI_COMMIT_REF_NAME/\//_}"
         # get image with fallback to master branch of the super repo
