fix static test discovery
This is achieved including bindings below python/dune/xt/test in the all
target, to be available for test discovery/generation during make test
without the rest of the bindings to be present.

--- a/python/dune/xt/test/CMakeLists.txt
+++ b/python/dune/xt/test/CMakeLists.txt
@@ -9,4 +9,5 @@
 #   Felix Schindler (2020)
 # ~~~
 
-dune_pybindxi_add_module(_test_grid_intersection EXCLUDE_FROM_ALL grid_intersection.cc)
+dune_pybindxi_add_module(_test_grid_intersection grid_intersection.cc)
+dune_pybindxi_add_module(_test_grid_types grid_types.cc)
