--- a/.ci/gitlab/config.yml
+++ b/.ci/gitlab/config.yml
@@ -4,6 +4,7 @@ stages:
   - images
   - cpp
   - python
+  - headercheck
 
 variables:
     GIT_SUBMODULE_STRATEGY: recursive
@@ -118,6 +119,15 @@ common unstable_gcc_full python:
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
+common unstable_gcc_full headercheck:
+    extends: .subdir-test
+    variables:
+        CI_IMAGE: debian-unstable_gcc_full
+        TESTS_MODULE_SUBDIR: common
+    stage: headercheck
+    script:
+          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
+
 grid unstable_gcc_full cpp:
     extends: .subdir-test
     variables:
@@ -135,6 +145,15 @@ grid unstable_gcc_full python:
     stage: python
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
+
+grid unstable_gcc_full headercheck:
+    extends: .subdir-test
+    variables:
+        CI_IMAGE: debian-unstable_gcc_full
+        TESTS_MODULE_SUBDIR: grid
+    stage: headercheck
+    script:
+          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
 
 functions unstable_gcc_full cpp:
     extends: .subdir-test
@@ -158,6 +177,17 @@ functions unstable_gcc_full python:
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
+functions unstable_gcc_full headercheck:
+    extends: .subdir-test
+    variables:
+        CI_IMAGE: debian-unstable_gcc_full
+        TESTS_MODULE_SUBDIR: functions
+    tags:
+        - amm-only
+    stage: headercheck
+    script:
+          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
+
 la unstable_gcc_full cpp:
     extends: .subdir-test
     variables:
@@ -180,6 +210,17 @@ la unstable_gcc_full python:
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
+la unstable_gcc_full headercheck:
+    extends: .subdir-test
+    variables:
+        CI_IMAGE: debian-unstable_gcc_full
+        TESTS_MODULE_SUBDIR: la
+    tags:
+        - amm-only
+    stage: headercheck
+    script:
+          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
+
 common gcc_full cpp:
     extends: .subdir-test
     variables:
@@ -198,6 +239,15 @@ common gcc_full python:
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
+common gcc_full headercheck:
+    extends: .subdir-test
+    variables:
+        CI_IMAGE: debian_gcc_full
+        TESTS_MODULE_SUBDIR: common
+    stage: headercheck
+    script:
+          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
+
 grid gcc_full cpp:
     extends: .subdir-test
     variables:
@@ -215,6 +265,15 @@ grid gcc_full python:
     stage: python
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
+
+grid gcc_full headercheck:
+    extends: .subdir-test
+    variables:
+        CI_IMAGE: debian_gcc_full
+        TESTS_MODULE_SUBDIR: grid
+    stage: headercheck
+    script:
+          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
 
 functions gcc_full cpp:
     extends: .subdir-test
@@ -238,6 +297,17 @@ functions gcc_full python:
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
+functions gcc_full headercheck:
+    extends: .subdir-test
+    variables:
+        CI_IMAGE: debian_gcc_full
+        TESTS_MODULE_SUBDIR: functions
+    tags:
+        - amm-only
+    stage: headercheck
+    script:
+          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
+
 la gcc_full cpp:
     extends: .subdir-test
     variables:
@@ -260,6 +330,17 @@ la gcc_full python:
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
+la gcc_full headercheck:
+    extends: .subdir-test
+    variables:
+        CI_IMAGE: debian_gcc_full
+        TESTS_MODULE_SUBDIR: la
+    tags:
+        - amm-only
+    stage: headercheck
+    script:
+          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
+
 common clang_full cpp:
     extends: .subdir-test
     variables:
@@ -277,6 +358,15 @@ common clang_full python:
     stage: python
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
+
+common clang_full headercheck:
+    extends: .subdir-test
+    variables:
+        CI_IMAGE: debian_clang_full
+        TESTS_MODULE_SUBDIR: common
+    stage: headercheck
+    script:
+          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
 
 grid clang_full cpp:
     extends: .subdir-test
@@ -296,6 +386,15 @@ grid clang_full python:
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
+grid clang_full headercheck:
+    extends: .subdir-test
+    variables:
+        CI_IMAGE: debian_clang_full
+        TESTS_MODULE_SUBDIR: grid
+    stage: headercheck
+    script:
+          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
+
 functions clang_full cpp:
     extends: .subdir-test
     variables:
@@ -314,6 +413,15 @@ functions clang_full python:
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
+functions clang_full headercheck:
+    extends: .subdir-test
+    variables:
+        CI_IMAGE: debian_clang_full
+        TESTS_MODULE_SUBDIR: functions
+    stage: headercheck
+    script:
+          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
+
 la clang_full cpp:
     extends: .subdir-test
     variables:
@@ -331,4 +439,13 @@ la clang_full python:
     stage: python
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
+
+la clang_full headercheck:
+    extends: .subdir-test
+    variables:
+        CI_IMAGE: debian_clang_full
+        TESTS_MODULE_SUBDIR: la
+    stage: headercheck
+    script:
+          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
 
