--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -16,9 +16,9 @@ import sys
 from setuptools import setup, find_packages
 
 requires=['binpacking==1.3', 'cython', 'jinja2', 'docopt', 'pylicense3>=0.4.1',
-                        'ipython', 'pytest', 'pytest-cov', 'cmake_format==0.4.1',
-                        'codecov', 'yapf==0.25', 'loguru', 'numpy', 'scipy',
-                        'k3d==2.6.6', 'vtk', 'ipywidgets', 'lxml', 'xmljson']
+                'ipython', 'pytest', 'pytest-cov', 'cmake_format==0.4.1',
+                'codecov', 'yapf==0.25', 'loguru', 'numpy', 'scipy', 'tabulate',
+                'k3d==2.6.6', 'vtk', 'ipywidgets', 'lxml', 'xmljson', 'pandas>=1.1']
 extras_requires=[]
 if '${HAVE_MPI}' == 'TRUE':
     extras_requires.append('mpi4py')
@@ -39,5 +39,6 @@ setup(name='dune.xt',
       scripts=['./scripts/generate_compare_functions.py',
                './scripts/distribute_testing.py',
                './scripts/dxt_code_generation.py',
+               './scripts/dxt_time_traces.py',
                './scripts/numa_speedup.py',
                './wrapper/dune_xt_execute.py'])
