--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -36,6 +36,7 @@ exclude = __init__.py
 testpaths = test/
 python_files = test/*.py
 python_class = Test
+junit_family=xunit2
 pep8maxlinelength = 120
 pep8ignore = E221,E226,E241,E242
 addopts= -p no:warnings
