[P|functions.parametric-expression] add bindings

--- a/python/dune/xt/functions/CMakeLists.txt
+++ b/python/dune/xt/functions/CMakeLists.txt
@@ -24,4 +24,5 @@ dune_pybindxi_add_module(_functions_gridfunction_interface_1d EXCLUDE_FROM_ALL g
 dune_pybindxi_add_module(_functions_gridfunction_interface_2d EXCLUDE_FROM_ALL gridfunction-interface-2d.cc)
 dune_pybindxi_add_module(_functions_gridfunction_interface_3d EXCLUDE_FROM_ALL gridfunction-interface-3d.cc)
 dune_pybindxi_add_module(_functions_indicator EXCLUDE_FROM_ALL indicator.cc)
+dune_pybindxi_add_module(_functions_parametric_expression EXCLUDE_FROM_ALL parametric-expression.cc)
 dune_pybindxi_add_module(_functions_spe10 EXCLUDE_FROM_ALL spe10.cc)
