update pybind11 source to v2.5 from v2.3

--- a/pybind11/CMakeLists.txt
+++ b/pybind11/CMakeLists.txt
@@ -107,7 +107,7 @@ if(NOT (CMAKE_VERSION VERSION_LESS 3.0)) # CMake >= 3.0 Build an interface libra
   add_library(module INTERFACE)
   add_library(pybind11::module ALIAS module)
   if(NOT MSVC)
-    target_compile_options(module PRIVATE -fvisibility=hidden)
+    target_compile_options(module INTERFACE -fvisibility=hidden)
   endif()
   target_link_libraries(module INTERFACE pybind11::pybind11)
   if(WIN32 OR CYGWIN)
