[P|functions] add InverseGridFunction

--- a/python/dune/xt/functions/CMakeLists.txt
+++ b/python/dune/xt/functions/CMakeLists.txt
@@ -24,5 +24,6 @@ dune_pybindxi_add_module(_functions_indicator EXCLUDE_FROM_ALL indicator.cc)
 dune_pybindxi_add_module(_functions_interfaces_grid_function_1d EXCLUDE_FROM_ALL interfaces/grid-function_1d.cc)
 dune_pybindxi_add_module(_functions_interfaces_grid_function_2d EXCLUDE_FROM_ALL interfaces/grid-function_2d.cc)
 dune_pybindxi_add_module(_functions_interfaces_grid_function_3d EXCLUDE_FROM_ALL interfaces/grid-function_3d.cc)
+dune_pybindxi_add_module(_functions_inverse EXCLUDE_FROM_ALL inverse.cc)
 dune_pybindxi_add_module(_functions_parametric_expression EXCLUDE_FROM_ALL parametric-expression.cc)
 dune_pybindxi_add_module(_functions_spe10 EXCLUDE_FROM_ALL spe10.cc)
