[P|functions] add ElementwiseDiameterFunction

--- a/python/dune/xt/functions/CMakeLists.txt
+++ b/python/dune/xt/functions/CMakeLists.txt
@@ -14,6 +14,7 @@
 
 dune_pybindxi_add_module(_functions_checkerboard EXCLUDE_FROM_ALL checkerboard.cc)
 dune_pybindxi_add_module(_functions_constant EXCLUDE_FROM_ALL constant.cc)
+dune_pybindxi_add_module(_functions_elementwise_diameter EXCLUDE_FROM_ALL elementwise-diameter.cc)
 dune_pybindxi_add_module(_functions_elementwise_minimum EXCLUDE_FROM_ALL elementwise-minimum.cc)
 dune_pybindxi_add_module(_functions_expression EXCLUDE_FROM_ALL expression.cc)
 dune_pybindxi_add_module(_functions_divergence EXCLUDE_FROM_ALL divergence.cc)
