--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -17,7 +17,7 @@ from setuptools import setup, find_packages
 
 requires=['binpacking==1.3', 'cython', 'jinja2', 'docopt', 'pylicense3>=0.4.1',
                         'ipython', 'pytest', 'pytest-cov', 'cmake_format==0.4.1',
-                        'codecov', 'yapf==0.25', 'loguru', 'numpy', 'scipy',
+                        'codecov', 'yapf==0.25', 'loguru', 'numpy', 'scipy', 'matplotlib',
                         'k3d==2.6.6', 'vtk', 'ipywidgets', 'lxml', 'xmljson']
 extras_require = []
 if '${HAVE_MPI}' == 'TRUE':
