[ci] fix cache dir

--- a/.ci/gitlab/config.yml
+++ b/.ci/gitlab/config.yml
@@ -11,11 +11,14 @@ variables:
     TRAVIS_BRANCH: ${CI_COMMIT_REF_NAME}
     TRAVIS_COMMIT: ${CI_COMMIT_SHA}
     MY_MODULE: dune-xt
+    CCACHE_BASEDIR: ${CI_PROJECT_DIR}
+    CCACHE_DIR: "${CI_PROJECT_DIR}/.ccache"
+    CCACHE_COMPILERCHECK: content
 
 cache:
   key: "$CI_JOB_NAME"
   paths:
-    - ${HOME}/.ccache
+    - .ccache
 
 .image_builder:
     tags:
