--- a/.ci/gitlab/config.yml
+++ b/.ci/gitlab/config.yml
@@ -117,6 +117,7 @@ common unstable_gcc_full cpp:
     tags:
         - dustin
     stage: cpp
+    needs: ["debian-unstable_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
@@ -128,6 +129,7 @@ common unstable_gcc_full python:
     tags:
         - dustin
     stage: python
+    needs: ["debian-unstable_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
@@ -139,6 +141,7 @@ common unstable_gcc_full headercheck:
     tags:
         - dustin
     stage: headercheck
+    needs: ["debian-unstable_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
 
@@ -150,6 +153,7 @@ grid unstable_gcc_full cpp:
     tags:
         - dustin
     stage: cpp
+    needs: ["debian-unstable_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
@@ -161,6 +165,7 @@ grid unstable_gcc_full python:
     tags:
         - dustin
     stage: python
+    needs: ["debian-unstable_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
@@ -172,6 +177,7 @@ grid unstable_gcc_full headercheck:
     tags:
         - dustin
     stage: headercheck
+    needs: ["debian-unstable_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
 
@@ -183,6 +189,7 @@ functions unstable_gcc_full cpp:
     tags:
         - dustin
     stage: cpp
+    needs: ["debian-unstable_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
@@ -194,6 +201,7 @@ functions unstable_gcc_full python:
     tags:
         - dustin
     stage: python
+    needs: ["debian-unstable_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
@@ -205,6 +213,7 @@ functions unstable_gcc_full headercheck:
     tags:
         - dustin
     stage: headercheck
+    needs: ["debian-unstable_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
 
@@ -216,6 +225,7 @@ la unstable_gcc_full cpp:
     tags:
         - dustin
     stage: cpp
+    needs: ["debian-unstable_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
@@ -227,6 +237,7 @@ la unstable_gcc_full python:
     tags:
         - dustin
     stage: python
+    needs: ["debian-unstable_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
@@ -238,6 +249,7 @@ la unstable_gcc_full headercheck:
     tags:
         - dustin
     stage: headercheck
+    needs: ["debian-unstable_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
 
@@ -249,6 +261,7 @@ common gcc_full cpp:
     tags:
         - dustin
     stage: cpp
+    needs: ["debian_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
@@ -260,6 +273,7 @@ common gcc_full python:
     tags:
         - dustin
     stage: python
+    needs: ["debian_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
@@ -271,6 +285,7 @@ common gcc_full headercheck:
     tags:
         - dustin
     stage: headercheck
+    needs: ["debian_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
 
@@ -282,6 +297,7 @@ grid gcc_full cpp:
     tags:
         - dustin
     stage: cpp
+    needs: ["debian_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
@@ -293,6 +309,7 @@ grid gcc_full python:
     tags:
         - dustin
     stage: python
+    needs: ["debian_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
@@ -304,6 +321,7 @@ grid gcc_full headercheck:
     tags:
         - dustin
     stage: headercheck
+    needs: ["debian_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
 
@@ -315,6 +333,7 @@ functions gcc_full cpp:
     tags:
         - dustin
     stage: cpp
+    needs: ["debian_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
@@ -326,6 +345,7 @@ functions gcc_full python:
     tags:
         - dustin
     stage: python
+    needs: ["debian_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
@@ -337,6 +357,7 @@ functions gcc_full headercheck:
     tags:
         - dustin
     stage: headercheck
+    needs: ["debian_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
 
@@ -348,6 +369,7 @@ la gcc_full cpp:
     tags:
         - dustin
     stage: cpp
+    needs: ["debian_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
@@ -359,6 +381,7 @@ la gcc_full python:
     tags:
         - dustin
     stage: python
+    needs: ["debian_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
@@ -370,6 +393,7 @@ la gcc_full headercheck:
     tags:
         - dustin
     stage: headercheck
+    needs: ["debian_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
 
@@ -379,6 +403,7 @@ common clang_full cpp:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: common
     stage: cpp
+    needs: ["debian_clang_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
@@ -388,6 +413,7 @@ common clang_full python:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: common
     stage: python
+    needs: ["debian_clang_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
@@ -397,6 +423,7 @@ common clang_full headercheck:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: common
     stage: headercheck
+    needs: ["debian_clang_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
 
@@ -406,6 +433,7 @@ grid clang_full cpp:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: grid
     stage: cpp
+    needs: ["debian_clang_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
@@ -415,6 +443,7 @@ grid clang_full python:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: grid
     stage: python
+    needs: ["debian_clang_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
@@ -424,6 +453,7 @@ grid clang_full headercheck:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: grid
     stage: headercheck
+    needs: ["debian_clang_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
 
@@ -433,6 +463,7 @@ functions clang_full cpp:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: functions
     stage: cpp
+    needs: ["debian_clang_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
@@ -442,6 +473,7 @@ functions clang_full python:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: functions
     stage: python
+    needs: ["debian_clang_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
@@ -451,6 +483,7 @@ functions clang_full headercheck:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: functions
     stage: headercheck
+    needs: ["debian_clang_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
 
@@ -460,6 +493,7 @@ la clang_full cpp:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: la
     stage: cpp
+    needs: ["debian_clang_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
@@ -469,6 +503,7 @@ la clang_full python:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: la
     stage: python
+    needs: ["debian_clang_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
@@ -478,6 +513,7 @@ la clang_full headercheck:
         CI_IMAGE: debian_clang_full
         TESTS_MODULE_SUBDIR: la
     stage: headercheck
+    needs: ["debian_clang_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
 
