--- a/.ci/gitlab/config.yml
+++ b/.ci/gitlab/config.yml
@@ -3,8 +3,8 @@
 stages:
   - images
   - cpp
-  - python
   - headercheck
+  - python
 
 variables:
     GIT_SUBMODULE_STRATEGY: recursive
@@ -121,18 +121,6 @@ common unstable_gcc_full cpp:
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
-common unstable_gcc_full python:
-    extends: .subdir-test
-    variables:
-        CI_IMAGE: debian-unstable_gcc_full
-        TESTS_MODULE_SUBDIR: common
-    tags:
-        - dustin
-    stage: python
-    needs: ["debian-unstable_gcc_full"]
-    script:
-          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
-
 common unstable_gcc_full headercheck:
     extends: .subdir-test
     variables:
@@ -156,18 +144,6 @@ grid unstable_gcc_full cpp:
     needs: ["debian-unstable_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
-
-grid unstable_gcc_full python:
-    extends: .subdir-test
-    variables:
-        CI_IMAGE: debian-unstable_gcc_full
-        TESTS_MODULE_SUBDIR: grid
-    tags:
-        - dustin
-    stage: python
-    needs: ["debian-unstable_gcc_full"]
-    script:
-          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
 grid unstable_gcc_full headercheck:
     extends: .subdir-test
@@ -193,18 +169,6 @@ functions unstable_gcc_full cpp:
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
-functions unstable_gcc_full python:
-    extends: .subdir-test
-    variables:
-        CI_IMAGE: debian-unstable_gcc_full
-        TESTS_MODULE_SUBDIR: functions
-    tags:
-        - dustin
-    stage: python
-    needs: ["debian-unstable_gcc_full"]
-    script:
-          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
-
 functions unstable_gcc_full headercheck:
     extends: .subdir-test
     variables:
@@ -228,18 +192,6 @@ la unstable_gcc_full cpp:
     needs: ["debian-unstable_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
-
-la unstable_gcc_full python:
-    extends: .subdir-test
-    variables:
-        CI_IMAGE: debian-unstable_gcc_full
-        TESTS_MODULE_SUBDIR: la
-    tags:
-        - dustin
-    stage: python
-    needs: ["debian-unstable_gcc_full"]
-    script:
-          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
 la unstable_gcc_full headercheck:
     extends: .subdir-test
@@ -265,18 +217,6 @@ common gcc_full cpp:
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
-common gcc_full python:
-    extends: .subdir-test
-    variables:
-        CI_IMAGE: debian_gcc_full
-        TESTS_MODULE_SUBDIR: common
-    tags:
-        - dustin
-    stage: python
-    needs: ["debian_gcc_full"]
-    script:
-          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
-
 common gcc_full headercheck:
     extends: .subdir-test
     variables:
@@ -300,18 +240,6 @@ grid gcc_full cpp:
     needs: ["debian_gcc_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
-
-grid gcc_full python:
-    extends: .subdir-test
-    variables:
-        CI_IMAGE: debian_gcc_full
-        TESTS_MODULE_SUBDIR: grid
-    tags:
-        - dustin
-    stage: python
-    needs: ["debian_gcc_full"]
-    script:
-          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
 grid gcc_full headercheck:
     extends: .subdir-test
@@ -337,18 +265,6 @@ functions gcc_full cpp:
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
-functions gcc_full python:
-    extends: .subdir-test
-    variables:
-        CI_IMAGE: debian_gcc_full
-        TESTS_MODULE_SUBDIR: functions
-    tags:
-        - dustin
-    stage: python
-    needs: ["debian_gcc_full"]
-    script:
-          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
-
 functions gcc_full headercheck:
     extends: .subdir-test
     variables:
@@ -373,18 +289,6 @@ la gcc_full cpp:
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
-la gcc_full python:
-    extends: .subdir-test
-    variables:
-        CI_IMAGE: debian_gcc_full
-        TESTS_MODULE_SUBDIR: la
-    tags:
-        - dustin
-    stage: python
-    needs: ["debian_gcc_full"]
-    script:
-          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
-
 la gcc_full headercheck:
     extends: .subdir-test
     variables:
@@ -407,16 +311,6 @@ common clang_full cpp:
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
-common clang_full python:
-    extends: .subdir-test
-    variables:
-        CI_IMAGE: debian_clang_full
-        TESTS_MODULE_SUBDIR: common
-    stage: python
-    needs: ["debian_clang_full"]
-    script:
-          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
-
 common clang_full headercheck:
     extends: .subdir-test
     variables:
@@ -436,16 +330,6 @@ grid clang_full cpp:
     needs: ["debian_clang_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
-
-grid clang_full python:
-    extends: .subdir-test
-    variables:
-        CI_IMAGE: debian_clang_full
-        TESTS_MODULE_SUBDIR: grid
-    stage: python
-    needs: ["debian_clang_full"]
-    script:
-          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
 grid clang_full headercheck:
     extends: .subdir-test
@@ -467,16 +351,6 @@ functions clang_full cpp:
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
-functions clang_full python:
-    extends: .subdir-test
-    variables:
-        CI_IMAGE: debian_clang_full
-        TESTS_MODULE_SUBDIR: functions
-    stage: python
-    needs: ["debian_clang_full"]
-    script:
-          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
-
 functions clang_full headercheck:
     extends: .subdir-test
     variables:
@@ -497,16 +371,6 @@ la clang_full cpp:
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_cpp.bash
 
-la clang_full python:
-    extends: .subdir-test
-    variables:
-        CI_IMAGE: debian_clang_full
-        TESTS_MODULE_SUBDIR: la
-    stage: python
-    needs: ["debian_clang_full"]
-    script:
-          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
-
 la clang_full headercheck:
     extends: .subdir-test
     variables:
@@ -516,4 +380,37 @@ la clang_full headercheck:
     needs: ["debian_clang_full"]
     script:
           - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_headercheck.bash
+
+
+
+unstable_gcc_full python:
+    extends: .subdir-test
+    variables:
+        CI_IMAGE: debian-unstable_gcc_full
+    tags:
+        - dustin
+    stage: python
+    needs: ["debian-unstable_gcc_full"]
+    script:
+          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
+
+gcc_full python:
+    extends: .subdir-test
+    variables:
+        CI_IMAGE: debian_gcc_full
+    tags:
+        - dustin
+    stage: python
+    needs: ["debian_gcc_full"]
+    script:
+          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
+
+clang_full python:
+    extends: .subdir-test
+    variables:
+        CI_IMAGE: debian_clang_full
+    stage: python
+    needs: ["debian_clang_full"]
+    script:
+          - /home/dune-ci/src/${MY_MODULE}/.ci/shared/scripts/test_python.bash
 
