[ci] add -s option to pytest to show sanitizer error messages

--- a/.ci/gitlab/config.yml
+++ b/.ci/gitlab/config.yml
@@ -15,6 +15,7 @@ variables:
     CCACHE_DIR: "${CI_PROJECT_DIR}/.ccache"
     CCACHE_COMPILERCHECK: content
     CCACHE_COMPRESS: "true"
+    PYTEST_ADDOPTS: "-s"
 
 .image_builder:
     tags:
