--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -14,6 +14,7 @@
 
 import sys
 from setuptools import setup, find_packages
+from setuptools.dist import Distribution
 
 requires=['binpacking==1.3', 'cython', 'jinja2', 'docopt', 'pylicense3>=0.4.1',
                         'ipython', 'pytest', 'pytest-cov', 'cmake_format==0.4.1',
@@ -22,6 +23,11 @@ requires=['binpacking==1.3', 'cython', 'jinja2', 'docopt', 'pylicense3>=0.4.1',
 extras_require = []
 if '${HAVE_MPI}' == 'TRUE':
     extras_require.append('mpi4py')
+
+class BinaryDistribution(Distribution):
+    """Distribution which always forces a binary package with platform name"""
+    def has_ext_modules(_):
+        return True
 
 setup(name='dune.xt',
       version='2.4',
@@ -32,7 +38,6 @@ setup(name='dune.xt',
       author_email='dune-xt-dev@listserv.uni-muenster.de',
       url='https://github.com/dune-community/dune-xt',
       packages = find_packages(),
-      zip_safe = 0,
       package_data = {'': ['*.so']},
       install_requires=requires,
       extras_require={'parallel': extras_require},
@@ -40,4 +45,5 @@ setup(name='dune.xt',
                './scripts/distribute_testing.py',
                './scripts/dxt_code_generation.py',
                './scripts/numa_speedup.py',
-               './wrapper/dune_xt_execute.py'])
+             './wrapper/dune_xt_execute.py'],
+      distclass=BinaryDistribution)
