--- a/python/dune/xt/common/CMakeLists.txt
+++ b/python/dune/xt/common/CMakeLists.txt
@@ -17,5 +17,6 @@ dune_pybindxi_add_module(timedlogging EXCLUDE_FROM_ALL timedlogging.cc)
 dune_pybindxi_add_module(_common_empty EXCLUDE_FROM_ALL empty.cc)
 dune_pybindxi_add_module(_common_exceptions EXCLUDE_FROM_ALL exceptions.cc)
 dune_pybindxi_add_module(_common_mpi EXCLUDE_FROM_ALL mpi.cc)
+dune_pybindxi_add_module(_common_parameter EXCLUDE_FROM_ALL parameter.cc)
 dune_pybindxi_add_module(_common_timings EXCLUDE_FROM_ALL timings.cc)
 dune_pybindxi_add_module(_common_traits EXCLUDE_FROM_ALL traits.cc)
