--- a/python/dune/xt/test/CMakeLists.txt
+++ b/python/dune/xt/test/CMakeLists.txt
@@ -9,5 +9,6 @@
 #   Felix Schindler (2020)
 # ~~~
 
+dune_pybindxi_add_module(_test_grid_element grid_element.cc)
 dune_pybindxi_add_module(_test_grid_intersection grid_intersection.cc)
 dune_pybindxi_add_module(_test_grid_types grid_types.cc)
