--- a/python/dune/xt/functions/CMakeLists.txt
+++ b/python/dune/xt/functions/CMakeLists.txt
@@ -25,6 +25,9 @@ dune_pybindxi_add_module(_functions_function_interface_3d EXCLUDE_FROM_ALL funct
 dune_pybindxi_add_module(_functions_gradient EXCLUDE_FROM_ALL gradient.cc)
 dune_pybindxi_add_module(_functions_gridfunction EXCLUDE_FROM_ALL gridfunction.cc)
 dune_pybindxi_add_module(_functions_indicator EXCLUDE_FROM_ALL indicator.cc)
+dune_pybindxi_add_module(_functions_interfaces_element_function_1d EXCLUDE_FROM_ALL interfaces/element-function_1d.cc)
+dune_pybindxi_add_module(_functions_interfaces_element_function_2d EXCLUDE_FROM_ALL interfaces/element-function_2d.cc)
+dune_pybindxi_add_module(_functions_interfaces_element_function_3d EXCLUDE_FROM_ALL interfaces/element-function_3d.cc)
 dune_pybindxi_add_module(_functions_interfaces_grid_function_1d EXCLUDE_FROM_ALL interfaces/grid-function_1d.cc)
 dune_pybindxi_add_module(_functions_interfaces_grid_function_2d EXCLUDE_FROM_ALL interfaces/grid-function_2d.cc)
 dune_pybindxi_add_module(_functions_interfaces_grid_function_3d EXCLUDE_FROM_ALL interfaces/grid-function_3d.cc)
