--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -39,7 +39,7 @@ class InstallPlatlib(install):
         self.install_lib = self.install_platlib
 
 
-setup(name='dune.xt',
+setup(name='dune-xt',
       version='${DUNE_XT_VERSION}',
       namespace_packages=['dune'],
       setup_requires=['wheel'],
