--- a/.ci/gitlab/config.yml
+++ b/.ci/gitlab/config.yml
@@ -16,6 +16,7 @@ variables:
     CCACHE_COMPILERCHECK: content
     CCACHE_COMPRESS: "true"
     PYTEST_ADDOPTS: "-s"
+    BASE_PROJECT: zivgitlab.wwu.io/ag-ohlberger/dune-community/dune-xt-super
 
 .image_builder:
     tags:
@@ -36,11 +37,11 @@ variables:
         max: 2
         when:
             - always
-    image: docker:19.03.12
+    image: harbor.uni-muenster.de/proxy-docker/library/docker:19.03.12
     variables:
         DOCKER_HOST: tcp://docker:2375/
         DOCKER_DRIVER: overlay2
-        IMAGE: $CI_REGISTRY/ag-ohlberger/dune-community/dune-xt/ci_testing_${CI_IMAGE}:${CI_COMMIT_SHORT_SHA}
+        IMAGE: ${CI_REGISTRY_IMAGE}/ci_testing_${CI_IMAGE}:${CI_COMMIT_SHORT_SHA}
     before_script:
       - |
         docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
@@ -49,14 +50,15 @@ variables:
 
         export BASEIMAGE="${MY_MODULE}-testing_${CI_IMAGE}:${CI_COMMIT_REF_NAME/\//_}"
         # get image with fallback to master branch of the super repo
-        docker pull dunecommunity/${BASEIMAGE} || export BASEIMAGE="${MY_MODULE}-testing_${CI_IMAGE}:master" ; docker pull dunecommunity/${BASEIMAGE}
+        docker pull ${BASE_PROJECT}/${BASEIMAGE} || export BASEIMAGE="${MY_MODULE}-testing_${CI_IMAGE}:master" ; docker pull ${BASE_PROJECT}/${BASEIMAGE}
     script:
       - |
         git submodule update --init --recursive
         docker build --build-arg BASE=${BASEIMAGE} -t ${IMAGE} -f .ci/gitlab/Dockerfile .
         docker push ${IMAGE}
     services:
-        - docker:dind
+        - name: harbor.uni-muenster.de/proxy-docker/library/docker:dind
+          alias: docker
     environment:
         name: unsafe
 
@@ -78,7 +80,7 @@ variables:
         max: 2
         when:
             - always
-    image: $CI_REGISTRY/ag-ohlberger/dune-community/dune-xt/ci_testing_${CI_IMAGE}:${CI_COMMIT_SHORT_SHA}
+    image: ${CI_REGISTRY_IMAGE}/ci_testing_${CI_IMAGE}:${CI_COMMIT_SHORT_SHA}
     cache:
       key: "$CI_JOB_NAME"
       paths:
