[P] add dune.xt.version

--- a/python/dune/xt/CMakeLists.txt
+++ b/python/dune/xt/CMakeLists.txt
@@ -17,3 +17,5 @@ add_subdirectory(functions)
 add_subdirectory(grid)
 add_subdirectory(la)
 add_subdirectory(test)
+
+dune_pybindxi_add_module(_version EXCLUDE_FROM_ALL version.cc)
