Remove mailing list references

--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -45,7 +45,7 @@ setup(name='dune.xt',
       setup_requires=['wheel'],
       description='Python for Dune-Xt',
       author='The dune-xt devs',
-      author_email='dune-xt-dev@listserv.uni-muenster.de',
+      author_email='felix.schindler@wwu.de',
       url='https://github.com/dune-community/dune-xt',
       packages = find_packages(),
       package_data = {'': ['*.so']},
