Update contact mail again

--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -45,8 +45,8 @@ setup(name='dune.xt',
       setup_requires=['wheel'],
       description='Python for Dune-Xt',
       author='The dune-xt devs',
-      author_email='felix.schindler@wwu.de',
-      url='https://github.com/dune-community/dune-xt',
+      author_email='dune-xt@dune-community.ovh',
+      url='https://zivgitlab.uni-muenster.de/ag-ohlberger/dune-community/dune-xt',
       packages = find_packages(),
       package_data = {'': ['*.so']},
       include_package_data=True,
