--- a/python/dune/xt/grid/CMakeLists.txt
+++ b/python/dune/xt/grid/CMakeLists.txt
@@ -17,6 +17,7 @@ dune_pybindxi_add_module(_grid_boundaryinfo_allneumann EXCLUDE_FROM_ALL boundary
 dune_pybindxi_add_module(_grid_boundaryinfo_allreflecting EXCLUDE_FROM_ALL boundaryinfo/allreflecting.cc)
 dune_pybindxi_add_module(_grid_boundaryinfo_interfaces EXCLUDE_FROM_ALL boundaryinfo/interfaces.cc)
 dune_pybindxi_add_module(_grid_boundaryinfo_normalbased EXCLUDE_FROM_ALL boundaryinfo/normalbased.cc)
+dune_pybindxi_add_module(_grid_boundaryinfo_functionbased EXCLUDE_FROM_ALL boundaryinfo/functionbased.cc)
 dune_pybindxi_add_module(_grid_boundaryinfo_types EXCLUDE_FROM_ALL boundaryinfo/types.cc)
 dune_pybindxi_add_module(_grid_element EXCLUDE_FROM_ALL element.cc)
 dune_pybindxi_add_module(_grid_filters_base EXCLUDE_FROM_ALL filters/base.cc)
