[cmake|dyn-version] combine versioneer output into dune cmake

--- a/cmake/modules/CMakeLists.txt
+++ b/cmake/modules/CMakeLists.txt
@@ -15,6 +15,7 @@ install(FILES AddALUGridCompileFlags.cmake
               DuneTBB.cmake
               DuneUtils.cmake
               DuneXtMacros.cmake
+              DuneXtVersionHelper.cmake
               DunePybindxiMacros.cmake
               DunePybindxiUtils.cmake
               FindPythonLibsNew.cmake
