--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,9 @@ include(DuneMacros)
 # start a dune project with information from dune.module
 dune_project()
 
+# (re-)set version info from git if available
+include(DuneXtVersionHelper)
+dune_xt_module_version_from_git()
 # dune-xt cmake includes
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
