[python/cmake] install jinja2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,10 @@ include(DunePybindxiInstallPythonPackage)
 dune_pybindxi_install_python_package(PATH python)
 include_dependent_binary_python_dirs()
 
+# install jinja2 for code generation into the dune-python virtualenv
+execute_process(COMMAND ${DUNE_PYTHON_VIRTUALENV_EXECUTABLE} -m pip install jinja2)
+
+
 add_subdirectory(python)
 
 include(GridUtils)
